# graphdb

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
client/: .env.example  package-lock.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
common/: Cargo.toml
common/src/: attr.rs  edge.rs  lib.rs  node.rs  value.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/db/: catalog.rs  database.rs  mod.rs
core/src/query/: ast.rs  mod.rs  parser.rs
core/src/storage/: file.rs  memory.rs  mod.rs  monolith.rs  simple.rs
core/tests/: database_cache.rs  database_integration.rs  parser_queries.rs  query_execution.rs  storage_memory.rs  storage_simple.rs
daemon/: Cargo.toml  build.rs
daemon/config/: dev.toml
daemon/src/: config.rs  daemon.rs  database.rs  error.rs  executor.rs  logging.rs  main.rs  plugins.rs  server.rs  signals.rs
daemon/src/path/: all_pairs.rs  astar.rs  delta.rs  dijkstra.rs  mod.rs  mst.rs  random_walk.rs  traversal.rs  yen.rs
docker/: config.toml
docs/: dense-storage.md
function-api/: Cargo.toml
function-api/src/: lib.rs
stdfunc/: Cargo.toml
stdfunc/src/: lib.rs  list.rs  math.rs  predicate.rs  scalar.rs  string.rs  util.rs
