[package]
name = "graphdb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nom = { version = "7.1", default-features = false, features = ["std"] }
bitflags = { version = "2.5", features = ["serde"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
