[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "graphdb"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
nix = { version = "0.29", features = ["process", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
thiserror = "1.0"
toml = "0.8"
serde_json = "1.0"
graphdb-core = { path = "../core" }
common = { path = "../common" }
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.4", features = ["limit"] }
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
